Parser/test_cases/good/expressionblockoneexpression.cl
class Test {
  foo:Test;
  baz():String { {"Single Expression";}};
};
