Parser/test_cases/bad/badletbinding.cl
class Test {
  foo:Test;
  bar():Int {let x:Int,y:true in 5};
};
